fix: hopefully it fixes height on ios 15

--- a/css/section_underbanner.css
+++ b/css/section_underbanner.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     padding: 20px 10px;
     background-color: white;
+    flex: 1;
 }
 
 .underbanner__image {
